ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Sending_Details__c/CnP_PaaS__CnP_Auto_Responder_Sending_Details__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Autoresponder Log Details</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C&amp;P Autoresponder Sent Email Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>