ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Sending_Details__c/fields/CnP_PaaS__Application_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Application_Name__c</fullName>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>