ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Sending_Details__c/fields/CnP_PaaS__Contact__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>C_P_Auto_Responder_Sending_Details</relationshipName>
    <type>Lookup</type>
</CustomField>