ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Sending_Details__c/fields/CnP_PaaS__No_Of_Times__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__No_Of_Times__c</fullName>
    <label>Attempts</label>
    <length>15</length>
    <type>Text</type>
</CustomField>