ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Sending_Details__c/fields/CnP_PaaS__Sended_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Sended_Date__c</fullName>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>