ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Sending_Details__c/fields/CnP_PaaS__Status__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Retry-Failed</fullName>
            </value>
            <value>
                <fullName>Bad-Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>